<resources>
    <string name="app_name">PokeApp</string>
    <string name="desc_main">Discover your favorite pokemon!</string>
    <string name="image_pokemon">Image Pokemon</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="pokemon_logo">Pokemon Logo</string>
    <string name="tab">Tabs</string>
    <string name="stats">Stats</string>
    <string name="detail">Detail</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="special_attack">Special Attack</string>
    <string name="special_defense">Special Defense</string>
    <string name="speed">Speed</string>
    <string name="height">Height: %d</string>
    <string name="abilities">Abilities: %s</string>
    <string name="weight">Weight: %d</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="try_again">Try Again</string>
    <string name="image_error">Image Error</string>
    <string name="go_back">Go Back</string>
</resources>