<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <ImageView
        android:id="@+id/img_back_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/go_back" />

    <ImageView
        android:id="@+id/img_pokemon_detail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_pokemon"
        android:src="@drawable/pokemon_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pokemon_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pokemon_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/img_pokemon_detail"
        app:layout_constraintStart_toStartOf="@+id/img_pokemon_detail"
        app:layout_constraintTop_toBottomOf="@+id/img_pokemon_detail" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_detail"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="16dp"
        android:background="@color/background"
        android:contentDescription="@string/tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_detail"
        app:tabIndicatorColor="@color/black"
        app:tabIndicatorHeight="4dp"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/black" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>