<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <TextView
        android:id="@+id/tv_title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_mono_medium"
        android:text="@string/desc_main"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_main"
        app:layout_constraintStart_toStartOf="@+id/tv_title_main"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_main" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_main"
        tools:listitem="@layout/item_pokemon" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:SpinKit_Color="@color/accentBlue"
        app:SpinKit_Style="RotatingCircle"
        app:layout_constraintBottom_toBottomOf="@id/rv_main"
        app:layout_constraintEnd_toEndOf="@id/rv_main"
        app:layout_constraintStart_toStartOf="@id/rv_main"
        app:layout_constraintTop_toTopOf="@id/rv_main" />

    <ImageView
        android:id="@+id/img_error_main"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_main"
        app:layout_constraintVertical_bias="0.4"
        android:contentDescription="@string/image_error" />

    <TextView
        android:id="@+id/tv_error_main"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/failed_to_load_data"
        app:layout_constraintEnd_toEndOf="@+id/img_error_main"
        app:layout_constraintStart_toStartOf="@+id/img_error_main"
        app:layout_constraintTop_toBottomOf="@+id/img_error_main" />

</androidx.constraintlayout.widget.ConstraintLayout>