<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        tools:context=".detail.StatsFragment">

        <ProgressBar
            android:id="@+id/progress_bar_hp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:progressDrawable="@drawable/custom_progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_hp" />

        <TextView
            android:id="@+id/tv_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar_attack"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:progressDrawable="@drawable/custom_progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar_hp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/progress_bar_hp"
            app:layout_constraintTop_toBottomOf="@+id/tv_attack" />

        <TextView
            android:id="@+id/tv_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/attack"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar_hp" />

        <ProgressBar
            android:id="@+id/progress_bar_defense"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:progressDrawable="@drawable/custom_progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar_hp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/progress_bar_hp"
            app:layout_constraintTop_toBottomOf="@+id/tv_defense" />

        <TextView
            android:id="@+id/tv_defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/defense"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar_attack" />

        <ProgressBar
            android:id="@+id/progress_bar_special_attack"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:progressDrawable="@drawable/custom_progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar_hp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/progress_bar_hp"
            app:layout_constraintTop_toBottomOf="@+id/tv_special_attack" />

        <TextView
            android:id="@+id/tv_special_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/special_attack"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar_defense" />

        <ProgressBar
            android:id="@+id/progress_bar_special_defense"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:progressDrawable="@drawable/custom_progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar_hp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/progress_bar_hp"
            app:layout_constraintTop_toBottomOf="@+id/tv_special_defense" />

        <TextView
            android:id="@+id/tv_special_defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/special_defense"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar_special_attack" />

        <ProgressBar
            android:id="@+id/progress_bar_speed"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:progressDrawable="@drawable/custom_progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar_hp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/progress_bar_hp"
            app:layout_constraintTop_toBottomOf="@+id/tv_special_speed" />

        <TextView
            android:id="@+id/tv_special_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/speed"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar_special_defense" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>